--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Fadd-Dombori</title>
 </head>
 <body>
-    
+    <img src="fadd_minta_ikszdé.png" alt="LOL" style="width:620px;height:1200px;">
 </body>
 </html>
