--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fadd-Dombori</title>
+    <link rel="stylesheet" href="stilus.css">
 </head>
 <body>
-    <img src="H:\fadd_minta_ikszdé.png" alt="LOL"  class="center" style="width:620px;height:1200px;">
+    <img src="H:\fadd_minta_ikszdé.png" alt="LOL" style="width:620px;height:1200px;">
+    <h2><i>Értesitjük a</i></h2>
+    <p>contact: ********@gmail.com</p>
 </body>
 </html>
