--- a/index.html
+++ b/index.html
@@ -7,8 +7,49 @@
     <link rel="stylesheet" href="stilus.css">
 </head>
 <body>
-    <img src="H:\fadd_minta_ikszdé.png" alt="LOL" style="width:620px;height:1200px;">
-    <h2><i>Értesitjük a</i></h2>
-    <p>contact: ********@gmail.com</p>
+    <!-- <img src="H:\fadd_minta_ikszdé.png" alt="LOL" style="width:620px;height:1200px;"> -->
+    <div class="tarto"></div>
+        <div class="elso">
+            <p class= "mono">Értesitjük a</p>
+            <div class="keret">
+                <p>FADD_DOMBORI</p>
+                <p>CAMPING & MOTEL</p>
+            </div>
+            <p class = "mono" style = "float: right;">jövő évi árairól</p>
+        </div>
+        <ul>
+            <li>
+                <ins>SZÁLLÁSÁRAINK</ins>
+                <p>Füthetö hotelszobák köépületben</p>
+                <table>
+                    <tr>
+                        <th>Féróhely</th>
+                        <th>Mennyiség</th>
+                        <th>Ár(Ft/Éj/szoba)
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                </table>   
+            </li>
+            <li><ins>MENÜÁRAINK*</ins>></li>
+            <li><ins>EGYÉB LEHETŐSÉGEK</ins>></li>
+        </ul>
 </body>
 </html>
